--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
                     <p>Oi! meu nome é George Henrique soares, seja bem vindo!</p>
 
                     <p>
+                        Comecei a ganhar dinheiro arrumando celulares e formatando computadores da familia e amigos.
+                        sempre tive curiosidade e vontade para aprender e resolver todos os problemas dos meus eletronicos.
                         Entusiasta em progamaçao e filosofia.
                         Sou apaixonado por tecnologias desde os 12 anos. 
                         sempre tive curiosidade e vontade para aprender e resolver todos os problemas com meus objetos.
